# vizza

./: README.md  pyproject.toml
src/vizza/: __init__.py  simplelogger.py
src/vizza/assets/: __init__.py  asciicolors.py
src/vizza/colormaps/: ibm.py
src/vizza/colors/: _color_data.py  ibm_colormaps.py  ibm_utils_to_delete.py
src/vizza/mplstyles/: texstyle.mplstyle
test/: test_colormaps.py  test_logger.py  test_styles.py
